# experimental_methods

./: .gitignore  H5ToCBF.py  KB_motor_scan.py  README.md  XDS_from_H5.py  acquire_range.py  adaptive_mirror.py  adxv_follow  adxv_follow_embl  align  analysis.py  analyze_undulator_scan.py  analyzer_monitor.py  anneal.py  area.py  area_scan.py  area_sense.py  astor-rw  attenuators.py  autoLaunchEiger  auto_process.sh  axis_camera.py  axis_stream.py  beam_align.py  beam_center.py  beam_position_controller.py  beam_stability_scan.py  beam_watch.py  beamcenter_calibration.py  beamline.py  best.py  bpc.py  bst3PositionAuto.py  calibrator.py  camera.py  cameraApp  camera_pixel_calibration.py  cameraman.py  cats.py  catscheck.py  (+209 more)
examples/minikappa_calibration/: 2025-07-25_zoom_5.npy
examples/opti/: zoom_X_careful_cam14_quad_lean.h5  zoom_X_careful_descriptions.pickle.bz2  zoom_X_careful_goniometer.h5  zoom_X_careful_parameters.pickle  zoom_X_careful_results.pickle  zoom_X_careful_sample_view_lean.h5
examples/tomo/: vadt_test_cam14_quad_lean.h5  vadt_test_goniometer.h5  vadt_test_sample_view_lean.h5
launchers/: astor  coox  cribleur-GUI  cribleur-initMot  hclab  jive  plateSreener  slitScanLauncher
src/experimental_methods/: __init__.py
src/experimental_methods/analysis/: aX.sh  analysis.py  analyzer_monitor.py  chooch.py  diffraction_experiment_analysis.py  extract_stats.py  fit_configuration.cfg  gauss2d.py  gaussfitter.py  generate_data_matrix.py  generate_xds_input.py  gxi.py  manual_autoPROC.sh  mare.py  minikappa_calibration.py  mucal.py  raster_scan_analysis.py  ref_xdsme  shape_from_diffraction_tomography.py  shape_from_history.py  shape_from_vadt.py  xdsme.py  xray_observation_analysis.py
src/experimental_methods/experiment/: KB_motor_scan.py  acquire_range.py  analyze_undulator_scan.py  beam_align.py  beam_stability_scan.py  beam_watch.py  beamcenter_calibration.py  calibrator.py  contrast_scan.py  diffraction_experiment.py  diffraction_tomography.py  dosing_experiment.py  energy_scan.py  excenter.py  experiment.py  experimental_table.py  film.py  fluorescence_spectrum.py  helical_scan.py  intensity_scan.py  inverse_scan.py  leal_et_al.py  mechanized_sample_evaluation.py  mirror_scan.py  mk3_calibration_acquisition.py  model_scans.py  (+29 more)
(+122 files in other folders)
