[project]
name = "experimental-methods"
version = "0.1.3"
description = ""
authors = [
    {name = "Martin Savko",email = "savko@synchrotron-soleil.fr"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.poetry]
packages = [{include = "experimental_methods", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
