[project]
name = "experimental-methods"
version = "0.1.12"
description = ""
authors = [
    {name = "Martin Savko",email = "savko@synchrotron-soleil.fr"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[project.scripts]
beam_align = "experimental_methods:beam_align"
slit_scan = "experimental_methods:slit_scan"
omega_scan = "experimental_methods:omega_scan"
raster_scan = "experimental_methods:raster_scan"
shape_from_vadt = "experimental_methods:shape_from_vadt"
image_monitor = "experimental_methods:image_monitor"
diffraction_tomography = "experimental_methods:diffraction_tomography"
optical_alignemnt = "experimental_methods:optical_alignment"

[tool.poetry]
packages = [{include = "experimental_methods", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
